--- a/department_app/templates/home.html
+++ b/department_app/templates/home.html
@@ -2,5 +2,9 @@
 {% block title %}Home{% endblock %}
 {% block content%}
 <br/>
-<h1>This is home page</h1>
+<h1>This is site where you can choose employee for your work</h1>
+<br/>
+<p>Here you can look at some departaments and employees</p>
+<p>If you want to choose just click on page that you want</p>
+
 {% endblock %}
