--- a/department_app/templates/departments.html
+++ b/department_app/templates/departments.html
@@ -1,66 +1,55 @@
 {% extends 'base.html'%}
-{% block title %}Employees{% endblock %}
+{% block title %}Departments{% endblock %}
 {% block content%}
-<div class="container mt-5">
-        <h1>Add department</h1>
-        <form method="post" class="row g-3 needs-validation">
-            <div class="col-md-2">
-                <input type="text" name="department" id="department" class="form-control" placeholder="Input new department">
-            </div>
-            <div class="col-md-2">
-                <button class="btn btn-primary" type="submit">Add</button>
-            </div>
-            <div>
-                <br>
-            </div>
 
-        </form>
-        <h1>Departments</h1>
-        <table id="data" class="table table-striped">
-            <thead>
-              <tr>
-                <th>Department</th>
-                  <th>Average salary</th>
-                  <th></th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for dnt in departments %}
-                <tr>
-                        {% if dnt.id == id %}
-                     <form method="post" class="row g-3 needs-validation" novalidate>
-                            <td>
-                                <input type="text" name="new_department" class="form-control" value="{{ dnt.department }}">
-                            </td>
-                            <td>{% for dnt_name in dnt_salary %}
-                              {% if dnt.department == dnt_name %}
-                                {{ dnt_salary[dnt_name] }}
-                              {% endif %}
-                              {% endfor %}
-                          </td>
-                            <td>
-                                <a href="/departments" class="btn btn-danger">Cancel</a>
-                                <button class="btn btn-success" type="submit">Change</button>
-                            </td>
-                     </form>
-                        {% else %}
-                    <td>
-                      {{ dnt.department }}
-                    </td>
-                  <td>{% for dnt_name in dnt_salary %}
-                      {% if dnt.department == dnt_name %}
-                        {{ dnt_salary[dnt_name] }}
-                      {% endif %}
-                      {% endfor %}
-                  </td>
-                     <td>
-                         <a href="/departments/{{ dnt.id }}/del" class="btn btn-danger">Delete</a>
-                        <a href="/departments/{{ dnt.id }}/edit" class="btn btn-success">Edit</a>
-                    </td>
-                    {% endif %}
-                </tr>
-              {% endfor %}
-            </tbody>
-  </table>
-    </div>
+<div class="container mt-5 ">
+    <h1>Departments</h1>
+    <a href="{{ url_for('page.add_department') }}" class="add_new"><button type="button" class="btn btn-primary btn-lg">Add new department</button></a>
+    <table id="data" class="table table-striped">
+        <thead>
+        <tr>
+            <th>Department</th>
+            <th>Average salary</th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for department in departments %}
+        <tr>
+            <td>{{ department.department }}</td>
+            <td>{{ department.average_salary }}</td>
+            <td>
+                <div class="department_button">
+                    <p>
+                        <input type="button" data-id="{{ department.uuid }}" class="btn btn-danger" value="Delete">
+                    </p>
+                </div>
+            </td>
+        </tr>
+        {% endfor %}
+
+        <div class="delete_window " style="display: none">
+            <form id='del' action="" method="post">
+                <br/>
+                <p>Please confirm delete department</p>
+                <input type="submit" class="btn btn-primary" value="Yes">
+                <input type="button" class="btn btn-secondary" value="Cancel">
+            </form>
+        </div>
+        </tbody>
+    </table>
+</div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+
+    $('input.btn-danger').click(function () {
+        $('form#del').attr('action', `/departments/delete/${this.dataset.id}`);
+        $('div.delete_window').show();
+        $('.b-popup').show();
+    });
+    $('input.btn-secondary').click(function () {
+        $('div.delete_window').hide();
+        $('.b-popup').hide();
+    });
+</script>
 {% endblock %}
