--- a/department_app/templates/employees.html
+++ b/department_app/templates/employees.html
@@ -1,110 +1,59 @@
 {% extends 'base.html'%}
 {% block title %}Employees{% endblock %}
 {% block content%}
-<div class="container mt-5">
-        <h1>Add employee</h1>
-      <form method="post" class="row g-3 needs-validation" novalidate>
-                <div class="col-md-2">
-                  <label for="validationCustom01" class="form-label">Full name</label>
-                  <input type="text"  name="name" class="form-control" id="validationCustom01" placeholder="John Smith" required>
-                </div>
-                <div class="col-md-2">
-                  <label for="validationCustom04" class="form-label">Department</label>
-                  <select name="department" class="form-select" id="validationCustom04" required>
-                    <option selected disabled value="">Choose department</option>
-                      {% for dnt in departments %}
-                          <option>{{ dnt.department }}</option>
-                      {% endfor %}
-                  </select>
-                  <div class="invalid-feedback">
-                    Please select a valid state.
-                  </div>
-                </div>
-                <div class="col-md-2">
-                  <label for="validationCustom05" class="form-label">Salary</label>
-                  <input name="salary" type="text" class="form-control" id="validationCustom05" placeholder="15000" required>
-                  <div class="invalid-feedback">
-                    Please provide a valid salary.
-                  </div>
-                </div>
 
-
-                  <div class="col-md-2">
-                    <label for="validationCustom05" class="form-label">Date of birth</label>
-                    <input name="birth_date" id="validationCustom06" type="date" class="form-control">
-                  </div>
-
-
-              <div class="col-12">
-                <button class="btn btn-primary" type="submit">Add employee</button>
-              </div>
-      </form>
- </div>
-<div class="container mt-5">
-    <h1>Find an employee by date</h1>
-     <form id="find_by_date" method="post" class="row g-3 needs-validation" novalidate>
-        <div class="col-md-2">
-                    <label for="validationCustom05" class="form-label">From</label>
-                    <input name="From" id="validationCustom0" type="date" class="form-control">
-        </div>
-         <div class="col-md-2">
-                    <label for="validationCustom05" class="form-label">To</label>
-                    <input name="To" id="validationCustom1" type="date" class="form-control">
-        </div>
-         <div class="col-12">
-                <button class="btn btn-primary" type="submit">Find employee</button>
-              </div>
-     </form>
-</div>
+<br/>
+<br/>
+<a href="{{ url_for('page.add_employee') }}" class="add_new">
+    <button type="button" class="btn btn-primary btn-lg">Add new employee</button>
+</a>
 <div class="container mt-5">
     <h1>Employees</h1>
-        <table id="data" class="table table-striped">
-            <thead>
-              <tr>
-                <th>Full name</th>
-                  <th>Department</th>
-                  <th>Salary</th>
-                  <th>Date of birth</th>
-                  <th></th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for emp in employees %}
-              {% if emp.id == id %}
-                  <form method="post" class="row g-3 needs-validation" novalidate>
-                            <tr>
-                                  <td><input type="text"  name="new_name" class="form-control" id="validationCustom08" value="{{ emp.name }}" required></td>
-                                  <td><select name="new_department" class="form-select" id="validationCustom09"  required>
-                                    <option selected >{{ emp.department }}</option>
-                                      {% for dnt in departments %}
-                                        {% if dnt.department != emp.department %}
-                                          <option>{{ dnt.department }}</option>
-                                        {% endif %}
-                                      {% endfor %}
-                                  </select></td>
-                                    <td><input name="new_salary" type="text" class="form-control" id="validationCustom10" value="{{ emp.salary }}" required></td>
-                                    <td><input name="new_birth_date" id="validationCustom11" type="date" class="form-control" value="{{ emp.birth_date }}"></td>
-                                    <td>
-                                 <a href="/employees" class="btn btn-danger">Cancel</a>
-                                <button class="btn btn-success" type="submit">Change</button>
-                                </td>
+    <table id="data" class="table table-striped">
+        <thead>
+        <tr>
+            <th>Full name</th>
+            <th>Department</th>
+            <th>Salary</th>
+            <th>Age</th>
+            <th>Date of birth</th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for employee in employees %}
+            <tr>
+                <td>{{ employee.name }}</td>
+                <td>{{ employee.department.department}}</td>
+                <td>{{ employee.salary }}</td>
+                <td>{{ employee.age }}</td>
+                <td>{{ employee.birth_date}}</td>
+                <td>
+                    <input type="button" data-id="{{employee.uuid }}" class="btn btn-danger" value="Delete">
+                </td>
 
-                         </tr>
-                  </form>
-              {% else %}
-                <tr>
-                  <td>{{ emp.name }}</td>
-                  <td>{{ emp.department }}</td>
-                    <td>{{ emp.salary }}</td>
-                    <td>{{ emp.birth_date }}</td>
-                    <td>
-                 <a href="/employees/{{ emp.id }}/del" class="btn btn-danger">Delete</a>
-                <a href="/employees/{{ emp.id }}/edit" class="btn btn-success">Edit</a>
-              </td>
-                </tr>
-                {% endif %}
-              {% endfor %}
-            </tbody>
-        </table>
+            </tr>
+        {% endfor %}
+        <div class="delete_window" style="display: none">
+            <form id='del' action="" method="post">
+                <p>Please confirm delete employee</p>
+                <input type="submit" class="btn btn-primary" value="Yes">
+                <input type="button" class="btn btn-secondary" value="Cancel">
+            </form>
+        </div>
+        </tbody>
+    </table>
 </div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $('input.btn-danger').click(function () {
+        $('form#del').attr('action', `/employees/delete/${this.dataset.id}`);
+        $('div.delete_window').show();
+        $('.b-popup').show();
+    });
+    $('input.btn-secondary').click(function () {
+        $('div.delete_window').hide();
+        $('.b-popup').hide();
+    });
+</script>
 {% endblock %}
