--- a/department_app/templates/add_employee.html
+++ b/department_app/templates/add_employee.html
@@ -6,7 +6,7 @@
     <form method="post" class="row g-3 needs-validation" novalidate>
         <div class="col-md-2">
             <label for="validationCustom01" class="form-label">Full name</label>
-            <input type="text" name="name" class="form-control" id="validationCustom01" placeholder="John Smith"
+            <input type="text" name="name" class="form-control" id="validationCustom01" placeholder="Name Surname"
                    required>
         </div>
         <div class="col-md-2">
