--- a/department_app/templates/employees.html
+++ b/department_app/templates/employees.html
@@ -47,29 +47,29 @@
 </div>
 <div id="window_emp" style="display: none" class="container mt-5">
     <form action="" method="post" class="row g-3 needs-validation">
-    <div class="col-md-2">
-        <input type="hidden" id="emp_id" name="uuid">
-        <label for="validationCustom01" class="form-label">Full name</label>
-        <input type="text"
-               class="form-control"
-               name="name"
-               placeholder="Name Surname">
-    </div>
+        <div class="col-md-2">
+            <input type="hidden" id="emp_id" name="uuid">
+            <label class="form-label">Full name</label>
+            <input type="text"
+                   class="form-control"
+                   name="name"
+                   placeholder="Name Surname">
+        </div>
         <div class="col-md-2">
             <label for="validationCustom05" class="form-label">Salary</label>
             <input name="salary" type="text" class="form-control" id="validationCustom05" placeholder="15000" required>
         </div>
-            <div class="col-md-2">
-                <label class="form-select">Department: <select name="department">
-                    {% for department in departments %}
-                    <option value="{{ department.uuid }}">{{ department.department }}</option>
-                    {% endfor %}
-                </select></label></p>
-            </div>
-            <div class="col-md-2">
-                <label>Birthday: <input type="date" id="birthday" class="form-control"
-                                                                 name="birth_date"></label>
-            </div>
+        <div class="col-md-2">
+            <label class="form-select">Department: <select name="department">
+                {% for department in departments %}
+                <option value="{{ department.uuid }}">{{ department.department }}</option>
+                {% endfor %}
+            </select></label></p>
+        </div>
+        <div class="col-md-2">
+            <label>Birthday: <input type="date" id="birthday" class="form-control"
+                                    name="birth_date"></label>
+        </div>
         <div class="col-12">
             <input type="submit" class="btn btn-primary" value="Save">
         </div>
