--- a/department_app/templates/add_department.html
+++ b/department_app/templates/add_department.html
@@ -5,7 +5,7 @@
         <h1>Add department</h1>
         <form method="post" class="row g-3 needs-validation">
             <div class="col-md-2">
-                <input type="text" name="department" id="department" class="form-control" placeholder="Input new department">
+                <input type="text" name="dep" id="dep" class="form-control" placeholder="Input new department">
             </div>
             <div class="col-md-2">
                 <button class="btn btn-primary" type="submit">Add</button>
