--- a/department_app/templates/departments.html
+++ b/department_app/templates/departments.html
@@ -3,10 +3,11 @@
 {% block content%}
 
 
-
 <div class="container mt-5 ">
     <h1>Departments</h1>
-    <a href="{{ url_for('page.add_department') }}" class="add_new"><button type="button" class="btn btn-primary btn-lg">Add new department</button></a>
+    <a href="{{ url_for('page.add_department') }}" class="add_new">
+        <button type="button" class="btn btn-primary btn-lg">Add new department</button>
+    </a>
     <table id="data" class="table table-striped">
         <thead>
         <tr>
@@ -18,11 +19,14 @@
         <tbody>
         {% for department in departments %}
         <tr>
-            <td>{{ department.department }}</td>
+            <td>
+                <div class='department_title'>{{ department.dep }}</div>
+            </td>
             <td>{{ department.average_salary }}</td>
             <td>{{ department.number_of_employees }}</td>
             <td>
                 <input type="button" data-id="{{ department.uuid }}" class="btn btn-danger" value="Delete">
+                <input type="button" data-id="{{ department.uuid }}" class="btn btn-warning" value="Edit">
             </td>
         </tr>
         {% endfor %}
@@ -38,8 +42,29 @@
         </tbody>
     </table>
 </div>
+
+<div id="window_dep" style="display: none">
+    <form action="" method="post">
+        <input type="hidden" id="dep_id" name="uuid">
+        <p>
+            <label class="add_department_title">Department name
+                <input type="text" class="add_title" name="dep">
+            </label>
+        </p>
+        <input type="submit" class="save" value="Save">
+    </form>
+</div>
+
+
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
+    $('.btn-warning').click(function () {
+        const a = $(`#${this.dataset.id}`);
+        const dep = a.find('.department_title').text();
+        $('.add_title').val(dep);
+        $('input#dep_id').val(this.dataset.id);
+        $('div#window_dep').show();
+    });
 
     $('input.btn-danger').click(function () {
         $('form#del').attr('action', `/departments/delete/${this.dataset.id}`);
